@@ -11,7 +11,7 @@ class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1", "k2/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsAll(expect);
     }
@@ -19,7 +19,7 @@ class DepartmentsTest {
     @Test
     public void whenNonChanga() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result).containsAll(expect);
     }
@@ -37,7 +37,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -63,7 +63,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1/sk1",
                 "k1/sk1/ssk1",
                 "k1/sk1/ssk2",
@@ -89,7 +89,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -115,7 +115,7 @@ class DepartmentsTest {
                 "k2/sk1/ssk2",
                 "k2/sk1/ssk1"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1/sk1",
                 "k1/sk1/ssk1",
                 "k1/sk1/ssk2",
